--- a/Scheduler.cabal
+++ b/Scheduler.cabal
@@ -27,7 +27,9 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Parsers_and_convertors
+    , Work_with_graph
+    , Project_structure
   other-modules:
       Paths_Scheduler
   hs-source-dirs:
@@ -36,6 +38,7 @@ library
       base >=4.7 && <5
     , attoparsec
     , text
+    , containers
   default-language: Haskell2010
 
 executable Scheduler-exe
