--- a/Scheduler.cabal
+++ b/Scheduler.cabal
@@ -39,6 +39,7 @@ library
     , attoparsec
     , text
     , containers
+    , transformers
   default-language: Haskell2010
 
 executable Scheduler-exe
@@ -53,6 +54,7 @@ executable Scheduler-exe
     , base >=4.7 && <5
     , attoparsec
     , text
+    , containers
   default-language: Haskell2010
 
 test-suite Scheduler-test
