--- a/Scheduler.cabal
+++ b/Scheduler.cabal
@@ -31,7 +31,6 @@ library
     , Work_with_graph
     , Project_structure
   other-modules:
-      Paths_Scheduler
   hs-source-dirs:
       src
   build-depends:
@@ -45,7 +44,6 @@ library
 executable Scheduler-exe
   main-is: Main.hs
   other-modules:
-      Paths_Scheduler
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -59,13 +57,16 @@ executable Scheduler-exe
 
 test-suite Scheduler-test
   type: exitcode-stdio-1.0
-  main-is: Spec.hs
+  main-is: Tests_executor.hs
   other-modules:
-      Paths_Scheduler
+      Unit
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Scheduler
     , base >=4.7 && <5
+    , tasty
+    , tasty-hspec
+    , containers
   default-language: Haskell2010
