--- a/Scheduler.cabal
+++ b/Scheduler.cabal
@@ -30,6 +30,7 @@ library
       Parsers_and_convertors
     , Work_with_graph
     , Project_structure
+    , Simple_console_executor
   other-modules:
   hs-source-dirs:
       src
@@ -38,7 +39,8 @@ library
     , attoparsec
     , text
     , containers
-    , transformers
+    , mtl
+    , process
   default-language: Haskell2010
 
 executable Scheduler-exe
@@ -53,6 +55,7 @@ executable Scheduler-exe
     , attoparsec
     , text
     , containers
+    , process
   default-language: Haskell2010
 
 test-suite Scheduler-test
